# short_clip

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: config.rs  lib.rs  main.rs  upload.rs
client/src/sys/: fs.rs
client/src/sys/windows/: clipboard.rs
finni/: Cargo.toml
finni/src/: download.rs  main.rs  upload.rs
server/: Cargo.toml
server/src/: download.rs  upload.rs  util.rs
shared/: Cargo.toml
shared/src/: lib.rs
short_clip/: Cargo.toml
short_clip/src/: config.rs  main.rs  upload.rs
short_clip/src/hotkey/: mod.rs  windows.rs
short_clip/src/sys/: fs.rs  mod.rs
short_clip/src/sys/windows/: clipboard.rs
short_clip/src/sys/x11/: clipboard.rs  hotkey.rs
src/: main.rs
