[package]
name = "short_clip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.3.0"
inputbot = { git = "https://github.com/obv-mikhail/InputBot", branch = "develop" }
rdev = { version = "0.5.3", features = ["unstable_grab"] }
xcb = { version = "1.3.0", features = ["xkb"] }
