[package]
name = "short-clip-client"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"


[dependencies]
ureq = { version = "2.9.1", features = ["charset", "gzip"] }
mime_guess = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
url = "2.5.0"
image = { version = "0.24.7", default-features = false, features = [
    "bmp",
    "farbfeld",
    "hdr",
    "openexr",
    "png",
] }

# Future zipping functionality
# zip = "0.6.6"
# walkdir = "2.4.0"

[target.'cfg(unix)'.dependencies]
arboard = "3.3.0"
xcb = { version = "1.3.0", features = ["xkb"] }

[target.'cfg(windows)'.dependencies]
clipboard-win = "5.0.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_UI",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
]
