[package]
name = "finni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-body-util = "0.1.0"
hyper = { version = "1.0.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.1", features = ["server-auto", "tokio"] }
tokio = { version = "1.35.0", features = [
    "rt",
    "net",
    "macros",
    "rt-multi-thread",
] }
