[package]
name = "short-clip-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
http-body-util = "0.1.0"
hyper = { version = "1.0.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.1", features = ["server-auto", "tokio"] }
rustc-hash = "1.1.0"
tokio = { version = "1.35.0", features = [
    "rt",
    "net",
    "macros",
    "fs",
    "rt-multi-thread",
] }
shared = { path = "../shared" }
mime_guess = { workspace = true }
