[package]
name = "short_clip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.3.0"
xcb = { version = "1.3.0", features = ["xkb"] }
ureq = { version = "2.9.1", features = ["charset", "gzip"] }
png = "0.17.10"
mime_guess = "2.0.4"
