[package]
name = "short_clip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.3.0"
ureq = { version = "2.9.1", features = ["charset", "gzip"] }
png = "0.17.10"
mime_guess = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
url = "2.5.0"

[target.'cfg(unix)'.dependencies]
xcb = { version = "1.3.0", features = ["xkb"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_UI",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
]
